# Vacancies_Parser_with_DB

./: README.md  main.py  pyproject.toml  requirments.txt
src/: db_manager_class.py  dbmanager_class.py  finctions.py  functions.py  requests_classes.py  user_interaction.py
tests/: test_functions.py  test_request_classes.py
